--- a/Vienna Tests/Files/FeedDiscovery.html
+++ b/Vienna Tests/Files/FeedDiscovery.html
@@ -7,6 +7,8 @@
         <!-- Accepted -->
         <link rel="alternate" type="application/rss+xml" href="feed.xml">
         <link rel="alternate" type="application/atom+xml" href="feed.xml">
+        <link rel="alternate" type="application/feed+json" href="feed.json">
+        <link rel="alternate" type="application/json" href="feed.json">
 
         <!-- Accepted -->
         <LINK rel="alternate" type="application/rss+xml" href="feed.xml">
@@ -25,7 +27,7 @@
         <!-- Not accepted, due to missing type attribute -->
         <link rel="alternate" href="feed.xml">
 
-        <!-- Not accepted, due to not having 'feed' or 'rss' in the title -->
+        <!-- Not accepted, due to generic MIME type and not having 'feed' or 'rss' in the title -->
         <link rel="alternate" type="application/rss" href="posts.xml">
     </head>
     <body>
