Import translations from Crowdin

--- a/Vienna Help/Resources/fr.lproj/Vienna.html
+++ b/Vienna Help/Resources/fr.lproj/Vienna.html
@@ -24,7 +24,7 @@
           <p><a href="intro.html">Apprendre comment débuter avec Vienna.</a></p>
           <p class="header">Raccourcis clavier</p>
           <p><a href="keyboard.html">Découvrir les raccourcis clavier pour les commandes courantes.</a></p>
-          <p class="header">Comment faire&nbsp;?</p>
+          <p class="header">Comment faire&nbsp;pour … ?</p>
           <p><a href="faq.html">Questions fréquemment posées, obtenir du support, étapes de dépannage.</a></p>
           <p class="header">Réglages avancés</p>
           <p><a href="advanced.html">Explications des réglages de l'onglet Advancés des Préférences.</a></p>
