--- a/Vienna Help/Resources/fr.lproj/faq.html
+++ b/Vienna Help/Resources/fr.lproj/faq.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Comment faire&nbsp;?</title>
+  <title>Comment je fais cela avec Vienna ?</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Questions fréquemment posées à propos de Vienna, accès au support technique et méthodes de résolution de problèmes." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Comment faire&nbsp;?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Comment je fais cela avec Vienna ?</span>
   <p>Ci-dessous vous trouverez les questions les plus courantes à propos de Vienna lors de sa phase de beta-test. Reportez-vous à la page <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ</a> (en anglais) pour les dernières astuces pour utiliser Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">J'ai rencontré un problème avec Vienna. Comment faire un rapport&nbsp;?</a></li>
