--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -5,7 +5,7 @@
 <head>
   <title>Raccourcis clavier de Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Découvrez les raccourcis claviers pour accéder aux fonctionnalités courantes de Vienna." />
+  <meta name="description" content="Découvrez les raccourcis clavier pour accéder aux fonctionnalités courantes de Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -60,12 +60,12 @@
       <td>Affiche l'article précédent de l'historique de lecture.</td>
     </tr>
     <tr>
-      <td>&gt;</td>
+      <td>&gt; ou .</td>
       <td>Affiche l'article suivant de l'historique de lecture.</td>
     </tr>
     <tr>
       <td>Gauche</td>
-      <td>Sélectionne la liste des dossiers lorsque on se trouve dans la liste des articles</td>
+      <td>Sélectionne la liste des dossiers lorsqu'on se trouve dans la liste des articles.</td>
     </tr>
     <tr>
       <td>Barre d'espace</td>
@@ -200,7 +200,7 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Entrée <i>ou</i> Alt-Return</td>
+      <td>Option-Entrée <i>ou</i> Option-Return</td>
       <td>Ouvre la page originelle de l'article dans un onglet sans tenir compte des préférences pour ouvrir les liens dans un navigateur externe.</td>
     </tr>
     <tr>
@@ -288,7 +288,7 @@
       <td>Arrête le chargement de la page web active.</td>
     </tr>
     <tr>
-      <td>⌘-[ <i>ou</i> ⌘-Gauche</td>
+      <td>⌘-^ <i>ou</i> ⌘-Gauche</td>
       <td>Affiche la page web précédente.</td>
     </tr>
     <tr>
