--- a/notes.html
+++ b/notes.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html><head><meta charset="utf-8"/></head><h2>Vienna 3.10.1</h2>
+<!DOCTYPE html><head><meta charset="utf-8"/></head><h2>Vienna 3.10.2</h2>
+<p><em>released 2026-02-24</em></p>
+<h3>🤷🏻 Bugfix</h3>
+<ul>
+<li>Fix crash at application launch with certain configurations</li>
+</ul>
+<h2>Vienna 3.10.1</h2>
 <p><em>released 2026-02-22</em></p>
 <h3>🚲 Changes</h3>
 <ul>
